--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,2 +1,5 @@
-﻿tenuki29.pdf: tenuki29.tex
+﻿# require:
+#   texlive texlive-luatex texlive-lang-japanese texlive-latex-extra
+
+tenuki29.pdf: tenuki29.tex
 	lualatex tenuki29
